# ALK-VisDock

./: Makefile  README.md  environment.yml  pyproject.toml  requirements-chem.txt  requirements-core.txt
_site_test/: manifest.json
_site_test/data/: molecules.json
alk_visdock/: __init__.py  __main__.py  build.py  models.py  server.py
alk_visdock/docking/: __init__.py  swissdock.py  vina.py
alk_visdock/sources/: __init__.py  chembl.py  pubchem.py  rcsb.py
alk_visdock/utils/: io.py  rdkit_tools.py
examples/: ligands.csv
scripts/: run_windows.ps1
site/: manifest.json
site/assets/: 2XP2.cif
site/data/: molecules.json
site_template/: app.js  index.html
